static/css/techreport/techreport.css
/* Variables */
:root {
  /* Main colors to use */
  --color-teal-faded: #c0ced0;
  --color-teal-light: #ebf6f8;
  --color-teal-medium: #6a797c;
  --color-teal-accent: #4e848b;
  --color-teal-dark: #3a5c63;
  --color-teal-darker: #1c4750;
  --color-blue-darkest: #0a3555;
  --color-blue-dark: #3a7098;
  --color-blue-light: #e1f1ff;
  --color-gray-lighter: #747171;
  --color-gray-medium: #5c5c5d;
  --color-gray-dark: #2f2f30;
  --color-gray-light: #f6f6f7;
  --color-teal-vibrant: #1c818d;
  --color-teal-vibrant-darker: #136e78;
  --color-yellow-light: #fefae5;
  --color-yellow-dark: #B08705;
  --color-yellow-darker: #705600;
  --color-yellow-darkest: #352902;

  /* Colors based on function */
  /* Regular text */
  --color-link: var(--color-blue-dark);
  --color-text: #444;
  --color-text-lighter: #5f6768;
  --color-text-darker: #1e1e1e;
  --color-text-inverted: #fff;

  /* Cards */
  --color-card-background: #fff;
  --color-card-border: #cdd4d6;
  --color-card-border-light: #e8e8e8;

  /* Page */
  --color-page-background: #f4f4f4;
  --color-bg-gradient: var(--color-teal-faded);
  --color-page-border: var(--color-teal-medium);
  --color-separator: var(--color-card-border);

  /* Checkboxes */
  --color-checkbox: var(--color-blue-dark);
  --color-checkbox-selected: var(--color-blue-dark);
  --color-checkbox-button-selected: var(--color-blue-light);
  --color-checkbox-button-label: var(--color-text);
  --color-checkbox-button-label-selected: var(--color-text);

  /* Buttons */
  --color-button-background: var(--color-teal-vibrant);
  --color-button-background-hover: var(--color-teal-vibrant-darker);
  --color-button-text: #fff;
  --color-theme-toggle-background: #f4f4f4;
  --color-tooltip-background: var(--color-card-background);
  --color-tooltip-border: var(--color-card-border);
  --color-button-border: var(--color-text-lighter);

  /* Dropdowns */
  --color-dropdown-background: transparent;
  --color-dropdown-background-hover: var(--color-teal-light);
  --color-dropdown-background-disabled: var(--color-gray-light);
  --color-dropdown-text: var(--color-text);
  --color-dropdown-text-disabled: var(--color-text-lighter);
  --color-dropdown-border-disabled: #aeb1b3;
  --color-dropdown-border: var(--color-text-lighter);

  /* Pills */
  --color-pillbutton-background: var(--color-gray-light);
  --color-pillbutton-text: var(--color-text-lighter);
  --color-pillbutton-border: var(--color-gray-medium);

  /* Navigation */
  --color-nav: #667a7d;
  --color-nav-active: var(--color-teal-accent);
  --color-nav-inactive: var(--color-teal-medium);

  /* Charts */
  --color-progress-basic-border: #879092;
  --color-progress-basic-bg: #eee;
  --color-progress-basic-fill: #3a5c63;

  /* Tables */
  --color-table-selected-bg: var(--color-yellow-light);
  --color-table-selected-border: var(--color-yellow-dark);
  --table-row-hover: var(--color-blue-light);
  --table-row-hover-border: var(--color-blue-dark);

  /* Font sizes */
  --font-size-small: 0.875rem;
  --font-size-regular: 1rem;
  --font-size-medium: 1.75rem;
  --font-size-large: 2.15rem;
  --font-size-xlarge: 2.25rem;

  /* Components */
  --card-shadow: 0 3px 12px 0px rgb(106, 121, 124, 20%);
  --card-radius: 0.625rem;
  --color-panel-text: #203b40;
  --color-panel-background: #bfe1e7;

  /* Graph colors */
  --graph-color-primary: var(--color-teal-dark);
  --graph-color-primary-darker: var(--color-teal-darker);
  --graph-color-line: #a6bbbe;
  --graph-color-labels: #62777b;
  --progess-color-empty: var(--color-progress-basic-bg);

  /* Defaults */
  --breakdown-color: var(--color-text);
  --focus-default: var(--color-teal-dark);
}

[data-theme="dark"] {
  /* Text */
  --color-link: var(--color-teal-faded);
  --color-text: #fff;
  --color-text-lighter: #fff;
  --color-text-darker: #fff;
  --color-text-inverted: #000;
  --color-nav-inactive: #6D8488;

  /* Cards */
  --color-card-background: #111;
  --color-card-border: #000;
  --card-shadow: 0 3px 12px 0px rgb(4, 8, 8, 20%);
  --color-page-background: #292828;

  /* Checkboxes */
  --color-checkbox-button-label-selected: #292828;
  --color-checkbox: #fff;
  --color-checkbox-selected: #292828;
  --color-theme-toggle-background: transparent;
  --color-bg-gradient: #111;
  --color-page-border: #000;
  --color-tooltip-border: var(--color-page-background);
  --color-panel-text: #bfe1e7;
  --color-panel-background: #203b40;
  --color-nav: #bfe1e7;

  /* Pills */
  --color-pillbutton-background: var(--color-page-background);
  --color-pillbutton-text: var(--color-text-lighter);
  --color-pillbutton-border: var(--color-gray-medium);

  /* Tables */
  --color-table-selected-bg: var(--color-yellow-darkest);
  --color-table-selected-border: var(--color-yellow-darker);
  --table-row-hover: var(--color-teal-darker);
  --table-row-hover-border: var(--color-blue-light);

  /* Graph colors */
  --graph-color-labels: #a6bbbe;
  --graph-color-line: var(--color-gray-medium);

  /* Dropdowns */
  --color-dropdown-border: var(--color-gray-lighter);
  --color-dropdown-background-hover: var(--color-page-background);
  --color-dropdown-text-disabled: var(--color-gray-lighter);
  --color-dropdown-background-disabled: var(--color-page-background);
  --color-dropdown-border-disabled: var(--color-gray-medium);;

  /* Buttons */
  --color-button-border: var(--color-gray-lighter);

  /* Other */
  --color-separator: var(--color-gray-dark);
  --focus-default: var(--color-text-darker);
  --progess-color-empty: var(--color-page-background);
}

/* ------------------------- */
/* ---- Building blocks ---- */
/* ------------------------- */

/* Page header and footer */
body footer {
  background-color: var(--color-card-background);
}

/* Links */
main :is(a, p a) {
  color: var(--color-link);
}

main :is(a, p a):is(:hover, :focus) {
  color: var(--color-text);
  text-decoration-thickness: 2px;
}

nav {
  color: var(--color-nav);
}
/* ... */

